// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Adapter processes AppPerformanceCounters as metrics 1`] = `Array []`;

exports[`Adapter processes AppPerformanceCounters as metrics 2`] = `
Array [
  GaugeMetric {
    "attributes": Object {
      "appRoleInstance": "{appRoleInstance Id}",
      "appRoleName": "{appRoleName}",
      "billedSize": 815,
      "category": "Process",
      "clientIp": "0.0.0.0",
      "clientType": "PC",
      "counter": "% Processor Time",
      "hostInstanceId": "{hostInstanceId}",
      "instance": "??APP_WIN32_PROC??",
      "name": "% Processor Time",
      "processId": "4608",
      "resourceGuid": "{resourceGuid}",
      "resourceId": "/SUBSCRIPTIONS/{subscriptionId}/RESOURCEGROUPS/{functionAppName}/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{resourceGroupName}",
      "sdkVersion": "af_azwapccore:2.16.0-18277",
      "timestamp": 1621887508465,
      "type": "AppPerformanceCounter",
      "value": 8.09632681121764,
    },
    "interval.ms": undefined,
    "name": "% Processor Time",
    "timestamp": 1621887508465,
    "type": "gauge",
    "value": 8.09632681121764,
  },
  GaugeMetric {
    "attributes": Object {
      "appRoleInstance": "{appRoleInstance Id}",
      "appRoleName": "{appRoleName}",
      "billedSize": 829,
      "category": "Process",
      "clientIp": "0.0.0.0",
      "clientType": "PC",
      "counter": "% Processor Time Normalized",
      "hostInstanceId": "{hostInstanceId}",
      "instance": "??APP_WIN32_PROC??",
      "name": "% Processor Time Normalized",
      "processId": "4608",
      "resourceGuid": "{resourceGuid}",
      "resourceId": "/SUBSCRIPTIONS/{subscriptionId}/RESOURCEGROUPS/{functionAppName}/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{resourceGroupName}",
      "sdkVersion": "af_azwapccore:2.16.0-18277",
      "timestamp": 1621887508465,
      "type": "AppPerformanceCounter",
      "value": 4.04816372935669,
    },
    "interval.ms": undefined,
    "name": "% Processor Time Normalized",
    "timestamp": 1621887508465,
    "type": "gauge",
    "value": 4.04816372935669,
  },
  GaugeMetric {
    "attributes": Object {
      "appRoleInstance": "{appRoleInstance Id}",
      "appRoleName": "{appRoleName}",
      "billedSize": 791,
      "category": "Process",
      "clientIp": "0.0.0.0",
      "clientType": "PC",
      "counter": "Private Bytes",
      "hostInstanceId": "{hostInstanceId}",
      "instance": "??APP_WIN32_PROC??",
      "name": "Private Bytes",
      "processId": "4608",
      "resourceGuid": "{resourceGuid}",
      "resourceId": "/SUBSCRIPTIONS/{subscriptionId}/RESOURCEGROUPS/{functionAppName}/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{resourceGroupName}",
      "sdkVersion": "af_azwapccore:2.16.0-18277",
      "timestamp": 1621887508465,
      "type": "AppPerformanceCounter",
      "value": 334188544,
    },
    "interval.ms": undefined,
    "name": "Private Bytes",
    "timestamp": 1621887508465,
    "type": "gauge",
    "value": 334188544,
  },
  GaugeMetric {
    "attributes": Object {
      "appRoleInstance": "{appRoleInstance Id}",
      "appRoleName": "{appRoleName}",
      "billedSize": 732,
      "category": "Memory",
      "clientIp": "0.0.0.0",
      "clientType": "PC",
      "counter": "Available Bytes",
      "hostInstanceId": "{hostInstanceId}",
      "name": "Available Bytes",
      "processId": "4608",
      "resourceGuid": "{resourceGuid}",
      "resourceId": "/SUBSCRIPTIONS/{subscriptionId}/RESOURCEGROUPS/{functionAppName}/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{resourceGroupName}",
      "sdkVersion": "af_azwapccore:2.16.0-18277",
      "timestamp": 1621887508465,
      "type": "AppPerformanceCounter",
      "value": 1741344768,
    },
    "interval.ms": undefined,
    "name": "Available Bytes",
    "timestamp": 1621887508465,
    "type": "gauge",
    "value": 1741344768,
  },
  GaugeMetric {
    "attributes": Object {
      "appRoleInstance": "{appRoleInstance Id}",
      "appRoleName": "{appRoleName}",
      "billedSize": 771,
      "category": "Process",
      "clientIp": "0.0.0.0",
      "clientType": "PC",
      "counter": "IO Data Bytes/sec",
      "hostInstanceId": "{hostInstanceId}",
      "instance": "??APP_WIN32_PROC??",
      "name": "IO Data Bytes/sec",
      "processId": "4608",
      "resourceGuid": "{resourceGuid}",
      "resourceId": "/SUBSCRIPTIONS/{subscriptionId}/RESOURCEGROUPS/{functionAppName}/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{resourceGroupName}",
      "sdkVersion": "af_azwapccore:2.16.0-18277",
      "timestamp": 1621887508465,
      "type": "AppPerformanceCounter",
      "value": 0,
    },
    "interval.ms": undefined,
    "name": "IO Data Bytes/sec",
    "timestamp": 1621887508465,
    "type": "gauge",
    "value": 0,
  },
]
`;

exports[`Adapter processes app event as event and span 1`] = `Array []`;

exports[`Adapter processes app event as event and span 2`] = `Array []`;

exports[`Adapter processes app event as event and span 3`] = `
Array [
  Event {
    "attributes": Object {
      "appRoleInstance": "{role instance value}",
      "appRoleName": "Web",
      "billedSize": 742,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "itemCount": 1,
      "myCustomProperty1": "This is my custom property",
      "myCustomProperty2": "And here is another.",
      "name": "my custom event",
      "now": "2021-05-04T19:12:36.185Z",
      "operationId": "98765",
      "parentId": "12345",
      "resourceGuid": "{guid of resource}",
      "resourceId": "/SUBSCRIPTIONS/{subscription Id}/RESOURCEGROUPS/{resource group in all caps}/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name in all caps}",
      "sdkVersion": "node:1.8.10",
    },
    "eventType": "AzureAppEvent",
    "timestamp": 1620155556185,
  },
]
`;

exports[`Adapter processes app event as event and span 4`] = `
Array [
  Span {
    "attributes": Object {
      "appRoleInstance": "{role instance value}",
      "appRoleName": "Web",
      "billedSize": 742,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "itemCount": 1,
      "myCustomProperty1": "This is my custom property",
      "myCustomProperty2": "And here is another.",
      "name": "my custom event",
      "now": "2021-05-04T19:12:36.185Z",
      "parent.id": "12345",
      "resourceGuid": "{guid of resource}",
      "resourceId": "/SUBSCRIPTIONS/{subscription Id}/RESOURCEGROUPS/{resource group in all caps}/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name in all caps}",
      "sdkVersion": "node:1.8.10",
      "service.name": "{function app name in all caps}",
      "type": "AppEvent",
    },
    "id": undefined,
    "timestamp": 1620155556185,
    "trace.id": "98765",
  },
  Span {
    "attributes": Object {
      "service.name": "{function app name in all caps}",
    },
    "id": "12345",
    "timestamp": 1620155556185,
    "trace.id": "98765",
  },
]
`;

exports[`Adapter processes app exception as event and span 1`] = `Array []`;

exports[`Adapter processes app exception as event and span 2`] = `
Array [
  Event {
    "attributes": Object {
      "appRoleInstance": "{role instance ID}",
      "appRoleName": "Web",
      "assembly": "at module.exports (C:/home/site/wwwroot/functionName/index.js:266:43)",
      "billedSize": 3379,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "details.0.error.message": "Error: Throwing an uncaught error on purpose.",
      "details.0.id": "0",
      "details.0.outerId": "0",
      "details.0.parsedStack.0.assembly": "at module.exports (path/to/file:lineNumber:charPos)",
      "details.0.parsedStack.0.fileName": "path/to/file.js",
      "details.0.parsedStack.0.level": 0,
      "details.0.parsedStack.0.line": 266,
      "details.0.parsedStack.0.method": "module.exports",
      "details.0.parsedStack.1.assembly": "at WorkerChannel.invocationRequest (path/to/file:lineNumber:charPos)",
      "details.0.parsedStack.1.fileName": "path/to/file.js",
      "details.0.parsedStack.1.level": 1,
      "details.0.parsedStack.1.line": 18579,
      "details.0.parsedStack.1.method": "WorkerChannel.invocationRequest (path/to/file:lineNumber:charPos)",
      "details.0.parsedStack.2.assembly": "at ClientDuplexStream.methodName (path/to/file:lineNumber:charPos)",
      "details.0.parsedStack.2.fileName": "path/to/file:lineNumber:charPos",
      "details.0.parsedStack.2.level": 2,
      "details.0.parsedStack.2.line": 18359,
      "details.0.parsedStack.2.method": "ClientDuplexStream.methodName (Drive:/Directory",
      "details.0.parsedStack.3.assembly": "at ClientDuplexStream.emit (path/to/file:lineNumber:charPos)",
      "details.0.parsedStack.3.fileName": "file.js",
      "details.0.parsedStack.3.level": 3,
      "details.0.parsedStack.3.line": 314,
      "details.0.parsedStack.3.method": "ClientDuplexStream.emit",
      "details.0.severityLevel": "Error",
      "details.0.type": "Error",
      "error": true,
      "error.class": "Error: Throwing an uncaught error on purpose.",
      "exceptionType": "Error",
      "id": "uuidWillBeGeneratedForErrorSpans",
      "innermostAssembly": "at module.exports (C:/home/site/wwwroot/functionName/index.js:266:43)",
      "innermostMessage": "Error: Throwing an uncaught error on purpose.",
      "innermostMethod": "module.exports",
      "innermostType": "Error",
      "itemCount": 1,
      "method": "module.exports",
      "name": "at module.exports (C:/home/site/wwwroot/functionName/index.js:266:43)",
      "operationId": "{long operation id}",
      "outerAssembly": "at module.exports (C:/home/site/wwwroot/functionName/index.js:266:43)",
      "outerMethod": "module.exports",
      "outerType": "Error",
      "parentId": "{long operation id}",
      "problemId": "Error at module.exports",
      "resourceGuid": "{resource GUID}",
      "resourceId": "/SUBSCRIPTIONS/{subscription ID}/RESOURCEGROUPS/{resource group name}/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name}",
      "sdkVersion": "node:1.8.10",
      "severityLevel": 3,
    },
    "eventType": "AzureAppExceptions",
    "timestamp": 1620233096802,
  },
]
`;

exports[`Adapter processes app exception as event and span 3`] = `
Array [
  Span {
    "attributes": Object {
      "appRoleInstance": "{role instance ID}",
      "appRoleName": "Web",
      "assembly": "at module.exports (C:/home/site/wwwroot/functionName/index.js:266:43)",
      "billedSize": 3379,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "details.0.error.message": "Error: Throwing an uncaught error on purpose.",
      "details.0.id": "0",
      "details.0.outerId": "0",
      "details.0.parsedStack.0.assembly": "at module.exports (path/to/file:lineNumber:charPos)",
      "details.0.parsedStack.0.fileName": "path/to/file.js",
      "details.0.parsedStack.0.level": 0,
      "details.0.parsedStack.0.line": 266,
      "details.0.parsedStack.0.method": "module.exports",
      "details.0.parsedStack.1.assembly": "at WorkerChannel.invocationRequest (path/to/file:lineNumber:charPos)",
      "details.0.parsedStack.1.fileName": "path/to/file.js",
      "details.0.parsedStack.1.level": 1,
      "details.0.parsedStack.1.line": 18579,
      "details.0.parsedStack.1.method": "WorkerChannel.invocationRequest (path/to/file:lineNumber:charPos)",
      "details.0.parsedStack.2.assembly": "at ClientDuplexStream.methodName (path/to/file:lineNumber:charPos)",
      "details.0.parsedStack.2.fileName": "path/to/file:lineNumber:charPos",
      "details.0.parsedStack.2.level": 2,
      "details.0.parsedStack.2.line": 18359,
      "details.0.parsedStack.2.method": "ClientDuplexStream.methodName (Drive:/Directory",
      "details.0.parsedStack.3.assembly": "at ClientDuplexStream.emit (path/to/file:lineNumber:charPos)",
      "details.0.parsedStack.3.fileName": "file.js",
      "details.0.parsedStack.3.level": 3,
      "details.0.parsedStack.3.line": 314,
      "details.0.parsedStack.3.method": "ClientDuplexStream.emit",
      "details.0.severityLevel": "Error",
      "details.0.type": "Error",
      "error": true,
      "error.class": "Error: Throwing an uncaught error on purpose.",
      "exceptionType": "Error",
      "innermostAssembly": "at module.exports (C:/home/site/wwwroot/functionName/index.js:266:43)",
      "innermostMessage": "Error: Throwing an uncaught error on purpose.",
      "innermostMethod": "module.exports",
      "innermostType": "Error",
      "itemCount": 1,
      "method": "module.exports",
      "name": "at module.exports (C:/home/site/wwwroot/functionName/index.js:266:43)",
      "outerAssembly": "at module.exports (C:/home/site/wwwroot/functionName/index.js:266:43)",
      "outerMethod": "module.exports",
      "outerType": "Error",
      "parent.id": "{long operation id}",
      "problemId": "Error at module.exports",
      "resourceGuid": "{resource GUID}",
      "resourceId": "/SUBSCRIPTIONS/{subscription ID}/RESOURCEGROUPS/{resource group name}/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name}",
      "sdkVersion": "node:1.8.10",
      "service.name": "{function app name}",
      "severityLevel": 3,
      "type": "AppExceptions",
    },
    "id": "uuidWillBeGeneratedForErrorSpans",
    "timestamp": 1620233096802,
    "trace.id": "{long operation id}",
  },
  Span {
    "attributes": Object {
      "service.name": "{function app name}",
    },
    "id": "{long operation id}",
    "timestamp": 1620233096802,
    "trace.id": "{long operation id}",
  },
]
`;

exports[`Adapter processes app request and dependency as spans 1`] = `Array []`;

exports[`Adapter processes app request and dependency as spans 2`] = `
Array [
  Span {
    "attributes": Object {
      "appRoleInstance": "very long id string",
      "appRoleName": "functionAppName goes here",
      "billedSize": 1082,
      "category": "Host.Results",
      "clientCity": "Portland",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientStateOrProvince": "Oregon",
      "clientType": "PC",
      "duration.ms": 9.1593,
      "fullName": "Functions.{function name}",
      "functionExecutionTimeMs": "4.7239",
      "hostInstanceId": "hostInstanceIdValue",
      "http.method": "GET",
      "http.path": "/api/{function name goes here}",
      "http.statusCode": "200",
      "http.url": "https://{function app name}.azurewebsites.net/api/{function name}",
      "invocationId": "invocationIdValue",
      "itemCount": 1,
      "logLevel": "Information",
      "name": "{function name}",
      "operationName": "{function name}",
      "parent.id": "12345",
      "performanceBucket": "<250ms",
      "processId": "8912",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionID goes here/RESOURCEGROUPS/resource group goes here/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name}",
      "sdkVersion": "azurefunctions: 3.0.15571.0",
      "service.name": "{function app name}",
      "success": true,
      "triggerReason": "This function was programmatically called via the host APIs.",
      "type": "AppRequest",
    },
    "id": "09d760d34d75e847",
    "timestamp": 1619736074123,
    "trace.id": "12345",
  },
  Span {
    "attributes": Object {
      "service.name": "{function app name}",
    },
    "id": "12345",
    "timestamp": 1619736074123,
    "trace.id": "12345",
  },
]
`;

exports[`Adapter processes app request and dependency as spans 3`] = `
Array [
  Span {
    "attributes": Object {
      "appRoleInstance": "very long id string",
      "appRoleName": "functionAppName goes here",
      "billedSize": 1082,
      "category": "Host.Results",
      "clientCity": "Portland",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientStateOrProvince": "Oregon",
      "clientType": "PC",
      "duration.ms": 9.1593,
      "fullName": "Functions.{function name}",
      "functionExecutionTimeMs": "4.7239",
      "hostInstanceId": "hostInstanceIdValue",
      "http.method": "GET",
      "http.path": "/api/{function name goes here}",
      "http.statusCode": "200",
      "http.url": "https://{function app name}.azurewebsites.net/api/{function name}",
      "invocationId": "invocationIdValue",
      "itemCount": 1,
      "logLevel": "Information",
      "name": "{function name}",
      "operationName": "{function name}",
      "parent.id": "12345",
      "performanceBucket": "<250ms",
      "processId": "8912",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionID goes here/RESOURCEGROUPS/resource group goes here/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name}",
      "sdkVersion": "azurefunctions: 3.0.15571.0",
      "service.name": "{function app name}",
      "success": true,
      "triggerReason": "This function was programmatically called via the host APIs.",
      "type": "AppRequest",
    },
    "id": "09d760d34d75e847",
    "timestamp": 1619736074123,
    "trace.id": "12345",
  },
  Span {
    "attributes": Object {
      "service.name": "{function app name}",
    },
    "id": "12345",
    "timestamp": 1619736074123,
    "trace.id": "12345",
  },
  Span {
    "attributes": Object {
      "appRoleInstance": "{role instance id}",
      "appRoleName": "Web",
      "billedSize": 786,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "dependencyType": "http",
      "duration.ms": 231,
      "http.target": "{target property of client.trackDependency}",
      "itemCount": 1,
      "name": "External/{name property of client.trackDependency}",
      "parent.id": "12345",
      "performanceBucket": "<250ms",
      "resourceGuid": "{resource uuid4}",
      "resourceId": "/SUBSCRIPTIONS/{subscription id}/RESOURCEGROUPS/{resource group in all caps}/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name in all caps}",
      "sdkVersion": "node:1.8.10",
      "service.name": "{function app name in all caps}",
      "success": true,
      "type": "AppDependency",
    },
    "id": "{id value}",
    "timestamp": 1620165670940,
    "trace.id": "67890",
  },
  Span {
    "attributes": Object {
      "service.name": "{function app name in all caps}",
    },
    "id": "12345",
    "timestamp": 1620165670940,
    "trace.id": "67890",
  },
]
`;

exports[`Adapter processes app request and dependency when sent as array of strings 1`] = `Array []`;

exports[`Adapter processes app request and dependency when sent as array of strings 2`] = `
Array [
  Span {
    "attributes": Object {
      "appRoleInstance": "roleInstanceId",
      "appRoleName": "Web",
      "billedSize": 786,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "dependencyType": "Buffer",
      "duration.ms": 231,
      "itemCount": 1,
      "name": "node buffer",
      "parent.id": "parentId",
      "performanceBucket": "<250ms",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionId/RESOURCEGROUPS/resourceGroupName/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/functionAppName",
      "sdkVersion": "node:1.8.10",
      "service.name": "functionAppName",
      "success": true,
      "target": "Buffer",
      "type": "AppDependency",
    },
    "id": "recordId",
    "timestamp": 1620674371908,
    "trace.id": "parentId",
  },
  Span {
    "attributes": Object {
      "service.name": "functionAppName",
    },
    "id": "parentId",
    "timestamp": 1620674371908,
    "trace.id": "parentId",
  },
  Span {
    "attributes": Object {
      "appRoleInstance": "dw0-hr0-1068-25",
      "appRoleName": "Web",
      "billedSize": 834,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "data": "SELECT * FROM Customers",
      "dependencyType": "ZSQL",
      "duration.ms": 231,
      "itemCount": 1,
      "name": "select customers proc",
      "parent.id": "parentId",
      "performanceBucket": "<250ms",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionId/RESOURCEGROUPS/resourceGroupName/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/functionAppName",
      "sdkVersion": "node:1.8.10",
      "service.name": "functionAppName",
      "success": true,
      "target": "http://dbname",
      "type": "AppDependency",
    },
    "id": "id",
    "timestamp": 1620674372049,
    "trace.id": "opId",
  },
  Span {
    "attributes": Object {
      "service.name": "functionAppName",
    },
    "id": "parentId",
    "timestamp": 1620674372049,
    "trace.id": "opId",
  },
  Span {
    "attributes": Object {
      "appRoleInstance": "roleInstanceId",
      "appRoleName": "functionAppName",
      "billedSize": 1087,
      "category": "Host.Results",
      "clientCity": "Pittsburgh",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientStateOrProvince": "Pennsylvania",
      "clientType": "PC",
      "duration.ms": 30021.5457,
      "fullName": "Functions.functionName",
      "functionExecutionTimeMs": "30020.222",
      "hostInstanceId": "hostInstance",
      "http.method": "GET",
      "http.path": "/api/functionName",
      "http.statusCode": "200",
      "http.url": "https://functionAppName.azurewebsites.net/api/functionName",
      "invocationId": "invocationId",
      "itemCount": 1,
      "logLevel": "Information",
      "name": "functionName",
      "operationName": "functionName",
      "parent.id": "parentId",
      "performanceBucket": "30sec-1min",
      "processId": "6904",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionId/RESOURCEGROUPS/resourceGroupName/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/functionAppName",
      "sdkVersion": "azurefunctions: 3.0.15584.0",
      "service.name": "functionAppName",
      "success": true,
      "triggerReason": "This function was programmatically called via the host APIs.",
      "type": "AppRequest",
    },
    "id": "bc40802d79559544",
    "timestamp": 1620674361060,
    "trace.id": "operationId",
  },
  Span {
    "attributes": Object {
      "service.name": "functionAppName",
    },
    "id": "parentId",
    "timestamp": 1620674361060,
    "trace.id": "operationId",
  },
]
`;

exports[`Adapter processes app request and dependency when sent as array of strings 3`] = `
Array [
  Span {
    "attributes": Object {
      "appRoleInstance": "roleInstanceId",
      "appRoleName": "Web",
      "billedSize": 786,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "dependencyType": "Buffer",
      "duration.ms": 231,
      "itemCount": 1,
      "name": "node buffer",
      "parent.id": "parentId",
      "performanceBucket": "<250ms",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionId/RESOURCEGROUPS/resourceGroupName/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/functionAppName",
      "sdkVersion": "node:1.8.10",
      "service.name": "functionAppName",
      "success": true,
      "target": "Buffer",
      "type": "AppDependency",
    },
    "id": "recordId",
    "timestamp": 1620674371908,
    "trace.id": "parentId",
  },
  Span {
    "attributes": Object {
      "service.name": "functionAppName",
    },
    "id": "parentId",
    "timestamp": 1620674371908,
    "trace.id": "parentId",
  },
  Span {
    "attributes": Object {
      "appRoleInstance": "dw0-hr0-1068-25",
      "appRoleName": "Web",
      "billedSize": 834,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "data": "SELECT * FROM Customers",
      "dependencyType": "ZSQL",
      "duration.ms": 231,
      "itemCount": 1,
      "name": "select customers proc",
      "parent.id": "parentId",
      "performanceBucket": "<250ms",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionId/RESOURCEGROUPS/resourceGroupName/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/functionAppName",
      "sdkVersion": "node:1.8.10",
      "service.name": "functionAppName",
      "success": true,
      "target": "http://dbname",
      "type": "AppDependency",
    },
    "id": "id",
    "timestamp": 1620674372049,
    "trace.id": "opId",
  },
  Span {
    "attributes": Object {
      "service.name": "functionAppName",
    },
    "id": "parentId",
    "timestamp": 1620674372049,
    "trace.id": "opId",
  },
  Span {
    "attributes": Object {
      "appRoleInstance": "roleInstanceId",
      "appRoleName": "functionAppName",
      "billedSize": 1087,
      "category": "Host.Results",
      "clientCity": "Pittsburgh",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientStateOrProvince": "Pennsylvania",
      "clientType": "PC",
      "duration.ms": 30021.5457,
      "fullName": "Functions.functionName",
      "functionExecutionTimeMs": "30020.222",
      "hostInstanceId": "hostInstance",
      "http.method": "GET",
      "http.path": "/api/functionName",
      "http.statusCode": "200",
      "http.url": "https://functionAppName.azurewebsites.net/api/functionName",
      "invocationId": "invocationId",
      "itemCount": 1,
      "logLevel": "Information",
      "name": "functionName",
      "operationName": "functionName",
      "parent.id": "parentId",
      "performanceBucket": "30sec-1min",
      "processId": "6904",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionId/RESOURCEGROUPS/resourceGroupName/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/functionAppName",
      "sdkVersion": "azurefunctions: 3.0.15584.0",
      "service.name": "functionAppName",
      "success": true,
      "triggerReason": "This function was programmatically called via the host APIs.",
      "type": "AppRequest",
    },
    "id": "bc40802d79559544",
    "timestamp": 1620674361060,
    "trace.id": "operationId",
  },
  Span {
    "attributes": Object {
      "service.name": "functionAppName",
    },
    "id": "parentId",
    "timestamp": 1620674361060,
    "trace.id": "operationId",
  },
  Span {
    "attributes": Object {
      "appRoleInstance": "{role instance id}",
      "appRoleName": "Web",
      "billedSize": 786,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "dependencyType": "http",
      "duration.ms": 231,
      "http.target": "{target property of client.trackDependency}",
      "itemCount": 1,
      "name": "External/{name property of client.trackDependency}",
      "parent.id": "12345",
      "performanceBucket": "<250ms",
      "resourceGuid": "{resource uuid4}",
      "resourceId": "/SUBSCRIPTIONS/{subscription id}/RESOURCEGROUPS/{resource group in all caps}/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name in all caps}",
      "sdkVersion": "node:1.8.10",
      "service.name": "{function app name in all caps}",
      "success": true,
      "type": "AppDependency",
    },
    "id": "{id value}",
    "timestamp": 1620165670940,
    "trace.id": "67890",
  },
  Span {
    "attributes": Object {
      "service.name": "{function app name in all caps}",
    },
    "id": "12345",
    "timestamp": 1620165670940,
    "trace.id": "67890",
  },
]
`;

exports[`Adapter processes app request as event 1`] = `Array []`;

exports[`Adapter processes app request as event 2`] = `
Array [
  Event {
    "attributes": Object {
      "appRoleInstance": "very long id string",
      "appRoleName": "functionAppName goes here",
      "billedSize": 1082,
      "category": "Host.Results",
      "clientCity": "Portland",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientStateOrProvince": "Oregon",
      "clientType": "PC",
      "durationMs": 9.1593,
      "fullName": "Functions.{function name}",
      "functionExecutionTimeMs": "4.7239",
      "hostInstanceId": "hostInstanceIdValue",
      "http.method": "GET",
      "http.path": "/api/{function name goes here}",
      "http.statusCode": "200",
      "http.url": "https://{function app name}.azurewebsites.net/api/{function name}",
      "id": "09d760d34d75e847",
      "invocationId": "invocationIdValue",
      "itemCount": 1,
      "logLevel": "Information",
      "name": "{function name}",
      "operationId": "12345",
      "operationName": "{function name}",
      "parentId": "12345",
      "performanceBucket": "<250ms",
      "processId": "8912",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionID goes here/RESOURCEGROUPS/resource group goes here/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name}",
      "sdkVersion": "azurefunctions: 3.0.15571.0",
      "success": true,
      "triggerReason": "This function was programmatically called via the host APIs.",
    },
    "eventType": "AzureAppRequest",
    "timestamp": 1619736074123,
  },
]
`;

exports[`Adapter processes app traces as logs 1`] = `Array []`;

exports[`Adapter processes app traces as logs 2`] = `
Array [
  Log {
    "attributes": Object {
      "appRoleInstance": "{id of role instance}",
      "appRoleName": "throwerror",
      "billedSize": 803,
      "category": "Host.LanguageWorkerConfig",
      "clientIp": "0.0.0.0",
      "clientType": "PC",
      "hostInstanceId": "{host instance uuid4}",
      "itemCount": 1,
      "logLevel": "Information",
      "logtype": "AzureAppTraces",
      "message": "FUNCTIONS_WORKER_RUNTIME set to node. Skipping WorkerConfig for language:java",
      "operationId": "{operationId}",
      "processId": "2600",
      "propOriginalFormat": "FUNCTIONS_WORKER_RUNTIME set to node. Skipping WorkerConfig for language:java",
      "resourceGuid": "{uuid4 of resource}",
      "resourceId": "/SUBSCRIPTIONS/{subscription uuid4}/RESOURCEGROUPS/{upper-case name of resource group}/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{upper-case name of function app}",
      "sdkVersion": "azurefunctions: 3.0.15571.0",
      "severityLevel": 1,
      "timestamp": 1619799074901,
      "trace.id": "{operationId}",
    },
    "message": "FUNCTIONS_WORKER_RUNTIME set to node. Skipping WorkerConfig for language:java",
    "timestamp": 1619799074901,
  },
  Log {
    "attributes": Object {
      "appRoleInstance": "{id of role instance}",
      "appRoleName": "throwerror",
      "billedSize": 815,
      "category": "Host.LanguageWorkerConfig",
      "clientIp": "0.0.0.0",
      "clientType": "PC",
      "hostInstanceId": "{host instance uuid4}",
      "itemCount": 1,
      "logLevel": "Information",
      "logtype": "AzureAppTraces",
      "message": "FUNCTIONS_WORKER_RUNTIME set to node. Skipping WorkerConfig for language:powershell",
      "operationId": "{operationId2}",
      "processId": "2600",
      "propOriginalFormat": "FUNCTIONS_WORKER_RUNTIME set to node. Skipping WorkerConfig for language:powershell",
      "resourceGuid": "{uuid4 of resource}",
      "resourceId": "/SUBSCRIPTIONS/{subscription uuid4}/RESOURCEGROUPS/{upper-case name of resource group}/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{upper-case name of function app}",
      "sdkVersion": "azurefunctions: 3.0.15571.0",
      "severityLevel": 1,
      "timestamp": 1619799074902,
      "trace.id": "{operationId2}",
    },
    "message": "FUNCTIONS_WORKER_RUNTIME set to node. Skipping WorkerConfig for language:powershell",
    "timestamp": 1619799074902,
  },
]
`;
